# surfdisp

./: .gitignore  CMakeLists.txt  README.md
include/: slegn.h  sregn.h  surfdisp.h
scripts/: plot_comparison.py  plot_slegn.py
src/: constants.f90  slegn.cpp  slegn96.f90  sregn.cpp  sregn96.f90  sregn96_fwrapper.f90  surfdisp.cpp  surfdisp_fwrapper.f90
test/: benchmark.cpp  benchmark_slegn.cpp  benchmark_sregn.cpp  plot_sregn.py  test_compare.cpp  test_slegn.cpp  test_sregn.cpp
